--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="section-title">
-          <h2>Free Music</h2>
+          <h2><span>Free</span> Music</h2>
         </div>
       </div>
       <div class="col-lg-6">
