--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,112 +1,54 @@
-.header-section {
-	padding-left: 55px;
-	padding-right: 72px;
-	background: #08192d;
+.custom-toggler .navbar-toggler-icon
+{
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-.site-logo {
-	display: inline-block;
-	padding: 0;
-	padding: 44px 15px;
+.main
+{
+  padding-right: 72px;
+  background-color: #08192d;
+  overflow: hidden;
+  display: flex;
 }
 
-.header-right {
-	float: right;
-	padding: 44px 0;
-	margin-left: 130px;
+a
+{
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+  font-size: 16px;
+  flex: 1;
+  align-content: flex-start;
+  width: max-content;
 }
 
-.header-right .hr-btn {
-	display: inline-block;
-	color: #979aa5;
+a:hover
+{
+  background-color: #ddd;
+  color: black;
 }
 
-.header-right .user-panel {
-	display: inline-block;
+a:active
+{
+  background-color: white;
 }
 
-.header-right .user-panel a {
-	font-size: 16px;
-	color: #ffffff;
-	margin: 0 10px;
+.site-name
+{
+  color: white;
+  font-size: 18px;
 }
 
-.header-right .user-panel .register {
-	color: #fc0254;
-	margin-right: 0;
+.site-name:hover
+{
+  background-color: #08192d;
+  color: white;
 }
 
-.header-right span {
-	color: #fff;
-	display: inline-block;
-	padding-left: 9px;
-}
-
-.main-menu {
-	list-style: none;
-	float: right;
-}
-
-.main-menu li {
-	display: inline-block;
-	position: relative;
-}
-
-.main-menu li a {
-	display: block;
-	font-size: 16px;
-	color: #ffffff;
-	padding: 44px 10px;
-	margin-left: 60px;
-}
-
-.main-menu li a:hover {
-	color: #fc0254;
-}
-
-.main-menu li:first-child a {
-	margin-left: 0;
-}
-
-.main-menu li:hover .sub-menu {
-	visibility: visible;
-	opacity: 1;
-	margin-top: 0;
-}
-
-.main-menu .sub-menu {
-	position: absolute;
-	list-style: none;
-	width: 220px;
-	left: 60px;
-	top: 100%;
-	padding: 20px 0;
-	visibility: hidden;
-	opacity: 0;
-	margin-top: 50px;
-	background: #fff;
-	z-index: 99;
-	-webkit-transition: all 0.4s;
-	transition: all 0.4s;
-	-webkit-box-shadow: 2px 7px 20px rgba(0, 0, 0, 0.05);
-	box-shadow: 2px 7px 20px rgba(0, 0, 0, 0.05);
-}
-
-.main-menu .sub-menu li {
-	display: block;
-}
-
-.main-menu .sub-menu li a {
-	display: block;
-	color: #000;
-	margin-left: 0;
-	padding: 5px 20px;
-}
-
-.main-menu .sub-menu li a:hover {
-	color: #fc0254;
-}
-
-.slicknav_menu {
-	display: none;
+img
+{
+  float: left;
 }
